--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ android {
         applicationId "learn.android.retrofitgithub"
         minSdkVersion 21
         targetSdkVersion 26
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -27,6 +28,15 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation "com.android.support:design:26.1.0"
+    implementation "com.android.support:cardview-v7:26.1.0"
+    implementation "com.android.support:recyclerview-v7:26.1.0"
+
+    implementation "com.android.support:support-vector-drawable:26.1.0"
+    implementation "com.android.support:support-v4:26.1.0"
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+
+
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
@@ -41,7 +51,12 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
 
-    testImplementation 'junit:junit:4.12'
+    api 'com.github.bumptech.glide:glide:4.0.0'
+
+
+
+
+            testImplementation 'junit:junit:4.12'
     androidTestImplementation ('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
